@@ -17,6 +17,7 @@
           <tr><th>Message</th><td id="message"></td></tr>
           <tr><th>Title</th><td id="title"></td></tr>
           <tr><th>URL</th><td id="url"></td></tr>
+          <tr><th>frameId</th><td id="frame-id"</td></tr>
         </tbody>
       </table>
     </div>
